# Fabric-OVR-Vulkan

./: CMakeLists.txt  README.md
include/: stb_ds.h  stb_image.h
shaders/: compile.bat  composite.comp  composite_comp.spv  composite_depthoffset.comp  composite_depthoffset_comp.spv  frag.spv  frag_crasher.spv  frag_inf_dis  frag_inf_opt.spv  global_ubo.glsl  node.frag  node.tesc  node.tese  node_comp.frag  node_comp.tesc  node_comp.tese  node_comp_frag.spv  node_comp_tess.spv  node_frag.spv  node_frag_tess.spv  node_mesh.frag  node_mesh.mesh  node_mesh.mesh.comp  node_mesh.task  node_mesh.task.comp  node_mesh_constants.glsl  node_mesh_constants.h  node_mesh_frag.spv  node_mesh_mesh.spv  node_mesh_task.spv  node_mesh_ubo.glsl  node_tesc.spv  node_tese.spv  node_tess.frag  node_tess.tese  node_tess.vert  node_tess_frag.spv  node_tess_tese.spv  node_vert.spv  shader_base.frag  (+6 more)
src/: fbr_app.c  fbr_app.h  fbr_buffer.c  fbr_buffer.h  fbr_camera.c  fbr_camera.h  fbr_cglm.h  fbr_core.c  fbr_core.h  fbr_descriptor_set.h  fbr_descriptors.c  fbr_descriptors.h  fbr_descriptors_std.c  fbr_descriptors_std.h  fbr_framebuffer.c  fbr_framebuffer.h  fbr_input.c  fbr_input.h  fbr_ipc.c  fbr_ipc.h  fbr_ipc_targets.c  fbr_ipc_targets.h  fbr_log.h  fbr_macros.h  fbr_mesh.c  fbr_mesh.h  fbr_node.c  fbr_node.h  fbr_node_parent.c  fbr_node_parent.h  fbr_pipeline.c  fbr_pipeline.h  fbr_pipelines.c  fbr_pipelines.h  fbr_process.c  fbr_process.h  fbr_standard_pipelines.c  fbr_standard_pipelines.h  fbr_swap.c  fbr_swap.h  (+25 more)
